# gsap

./: .all-contributorsrc  .copier-answers.yml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  labels.yml  poetry-upgrade.yml  update-readme.yml
docs/: conf.py  contributing.md  index.md  installation.md  usage.md
src/gsap/: __init__.py  __main__.py  annotateseq.py  bam2fasta.py  getconsensusfasta3.sh  gsap_cli.py  preprocessing.py  tuxedpreprocessing.py  variantdiscovery.py  vcf2gff.sh
src/gsap/sim/: __init__.py  idea_insilico.py
src/gsap/toolset/: big_blast.pl
tests/: test_annotateseq.py  test_assembleBSB1.py  test_idea_insilico.py  test_main.py  test_preprocessing.py  test_tophat.py  test_variantdiscovery.py
tests/data/RefGenome/AL009126_v11/: AL009126.2.dict  AL009126.2.fasta.fai  AL009126.dict  AL009126.fasta.fai
tests/data/RefGenome/AL009126_v11.old/: AL009126.dict
tests/data/RefGenome/Bacillus_subtilis_168_NC_000964.3/: NC_000964_ribC.gb  NC_000964_ribOperon.gb  NC_000964_workingcopy_region.fa
tests/data/test_ref_data/: BSB1_annotated.gb  addrg_reads.bai  addrg_reads.bam  consensus.fasta  dedup_reads.bam  filtered_sample_aligned.bai  filtered_sample_aligned.bam  filtered_sample_aligned_sorted.bam  metrics.txt  raw_variants.vcf  raw_variants.vcf.gz.tbi  raw_variants.vcf.idx  sorted_reads.bai  sorted_reads.bam  unmapped_reads.bam
tests/data/test_ref_data/denovo/spades/output/: dataset.info  input_dataset.yaml  params.txt  run_spades.sh  run_spades.yaml
tests/data/test_ref_data/denovo/spades/output/K127/configs/: config.info
tests/data/test_ref_data/denovo/spades/output/K21/configs/: config.info
tests/data/test_ref_data/denovo/spades/output/K33/configs/: config.info
tests/data/test_ref_data/denovo/spades/output/K55/configs/: config.info
tests/data/test_ref_data/denovo/spades/output/K77/configs/: config.info
tests/data/test_ref_data/denovo/spades/output/K99/configs/: config.info
tests/data/test_ref_data/denovo/spades/output/corrected/configs/: config.info
